# libnumcalc

./: .gitignore  COPYING  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  libnumcalc.vcxproj  libnumcalc.vcxproj.filters
include/: Makefile.am  Makefile.in  blas.h  interp.h  lapack.h
include/numcalc/: Makefile.am  Makefile.in  blas.h  blasext.h  interp.h  lapack.h  typedef.h
lib/: Makefile.am  Makefile.in  common.h
lib/blas/: common.h  dasum.c  dgemv.c  dger.c  dswap.c  dtbsv.c  lsame.c  scopy.c  xerbla.c
lib/blasext/: common.h  ssum.c
lib/interp/: common.h  dinterp1.c  interp1.c  sinterp1.c
lib/lapack/: dgbtrs.c
src/: Makefile.am  Makefile.in  array_notation.h
src/blas/: blas_private.h  dasum.c  daxpy.c  dcopy.c  dgemv.c  dger.c  dscal.c  dswap.c  dtbsv.c  idamax.c  lsame.c  xerbla.c
src/blasext/: common.h  dsum.c
src/interp/: interp1.c  interp_private.h
src/lapack/: common.h  dgbtf2.c  dgbtrs.c  lapack_private.h
test/: Makefile.am  Makefile.in  interp1.c
test/interp/: interp1.c
tests/: Makefile.am  Makefile.in  common.h
tests/blas/: Makefile.am  Makefile.in  dasum.c  dcopy.c  dger.c  dscal.c  lsame.c
tests/blasext/: Makefile.am  Makefile.in  dsum.c
tests/interp/: Makefile.am  Makefile.in  dinterp1.c
