AM_CPPFLAGS = -I$(srcdir)/include
AM_CFLAGS = -Wall

lib_LIBRARIES = libnumcalc.a

libnumcalc_a_SOURCES = \
    src/blas/dcopy.c \
    src/blas/dgemv.c \
    src/blas/dger.c \
    src/blas/dscal.c \
    src/blas/dswap.c \
    src/blas/dtbsv.c \
    src/blas/idamax.c \
    src/blas/lsame.c \
    src/blas/xerbla.c \
    src/interp/interp1.c \
    src/lapack/dgbtf2.c \
    src/lapack/dgbtrs.c
