AM_CPPFLAGS = -I$(top_srcdir)/include
AM_CFLAGS = -Wall

lib_LIBRARIES = libnumcalc.a

libnumcalc_a_SOURCES = \
    blas/dcopy.c \
    blas/dgemv.c \
    blas/dger.c \
    blas/dscal.c \
    blas/dswap.c \
    blas/dtbsv.c \
    blas/idamax.c \
    blas/lsame.c \
    blas/xerbla.c \
    interp/interp1.c \
    lapack/dgbtf2.c \
    lapack/dgbtrs.c
